fix: modal CSS overflow
... so it only targets the form-linker modal and not the cct calc.

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -977,6 +977,6 @@ dialog::backdrop {
   backdrop-filter: blur(10px);
 }
 
-html:has(dialog[open]) {
+html:has(dialog[data-cy="formLinkerModal"][open]) {
   overflow: hidden;
 }
